@@ -27,6 +27,16 @@ this.  This is a work in progress)
 MACRO		EXPLANATION
 -----		-----------
 
+GC_DEBUG	Tested by gc.h.  Causes all-upper-case macros to
+		expand to calls to debug versions of collector routines.
+
+GC_NO_THREAD_REDIRECTS Tested by gc.h.  Prevents redirection of thread
+		creation routines etc. to GC_ versions.  Requires the
+		programmer to explicitly handle thread registration.
+
+GC_NO_THREAD_DECLS Tested by gc.h. MS Windows only.  Do not declare
+		Windows thread creation routines and do not include windows.h.  
+
 __DMC__	Always #define'd by the Digital Mars compiler. Expands
 		to the compiler version number in hex, i.e. 0x810 is
 		version 8.1b0
